# Momentum-Research

./: .gitignore  README.md  pyproject.toml  requirements.txt
archive/: backtest.py  data_loader.py  signals.py  utils.py
data/cleaned/: cleaned_monthly_prices.csv  ff5_umd_alphas.csv  ff5_umd_monthly.csv  ff_regression_table.csv  ff_regression_table.tex  masked_prices_survivorship.csv  monthly_adjclose_union.csv  returns_survivorship.csv  sp500_membership_monthly.csv  strategy_gross_survivorship.csv  strategy_monthly_returns.csv  strategy_net_survivorship.csv  strategy_turnover_survivorship.csv  summary_stats.csv  tc_sensitivity.csv
notebooks/: 01-data-loading.py  performance.ipynb  robustness.ipynb
notebooks/.ipynb_checkpoints/: performance-checkpoint.ipynb
paper/: paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  references.bib
paper/tables/: summary_stats.tex
src/: analysis_ff_alpha.py  analysis_plots.py  analysis_summary.py  analysis_surviorship_free.py  backtest.py  data_loader.py  performance.py  robustness.py  signals.py
src/data/: build_sp500_history.py  download_prices_by_union.py  fetch_ff5_umd.py  panel_from_membership.py  turnover.py
