[project]
name = "quant-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dataclasses>=0.8",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.4.4",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.65",
]
